<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/lang_english_US"
        android:icon="@drawable/usa"
        android:title="@string/english_us" />
    <item
        android:id="@+id/lang_spanish_US"
        android:icon="@drawable/mexico"
        android:title="@string/spanish_us" />
    <item
        android:id="@+id/lang_spanish_Spain"
        android:icon="@drawable/spain"
        android:title="@string/spanish_ES" />
    <item
        android:id="@+id/lang_french_France"
        android:icon="@drawable/france"
        android:title="@string/french_FR" />
    <item
        android:id="@+id/lang_italian_Italy"
        android:icon="@drawable/italy"
        android:title="@string/italy_IT" />
    <item
        android:id="@+id/lang_german_Germany"
        android:icon="@drawable/germany"
        android:title="@string/german_DE" />
    <item
        android:id="@+id/lang_portuguese_Brasil"
        android:icon="@drawable/brazil"
        android:title="@string/portuguese_BR" />
    <item
        android:id="@+id/lang_chinese_Simplified"
        android:icon="@drawable/china"
        android:title="@string/chinese_Sim" />

    <item
        android:id="@+id/lang_japanese"
        android:icon="@drawable/japan"
        android:title="@string/japanese" />

    <item
        android:id="@+id/lang_vietnamese"
        android:icon="@drawable/vietnam"
        android:title="@string/vietnamese" />

    <item
        android:id="@+id/lang_nepali"
        android:icon="@drawable/nepal"
        android:title="@string/nepali" />

    <item
        android:id="@+id/lang_bengali"
        android:icon="@drawable/india"
        android:title="@string/bengali" />

    <item
        android:id="@+id/lang_swahili_Tanzania"
        android:icon="@drawable/tanzania"
        android:title="@string/swahili_TZ" />


</menu>
